@@ -1,5 +1,7 @@
 # vim: ft=python fileencoding=utf-8 sts=4 sw=4 et:
 
+# Copyright 2021 Florian Bruhin (The Compiler) <mail@qutebrowser.org>
+#
 # This file is part of qutebrowser.
 #
 # qutebrowser is free software: you can redistribute it and/or modify
